[Java] Version 1.2.0 - Arrow Flight Beta (#325)
Signed-off-by: teodordelibasic-db <teodor.delibasic@databricks.com>